  example for a use).
  
- The "plothover" event is now emitted immediately instead of at most
  10 times per second, you'll have to put in a setTimeout yourself if
  you're doing something really expensive on this event.

- The built-in date formatter can now be accessed as
  $.plot.formatDate(...) (suggestion by Matt Manela) and even
  replaced.

- Added "borderColor" option to the grid (patch from Amaury Chamayoau
  and patch from Mike R. Williamson).

- Added support for gradient background for the grid, take a look at
  the "setting options" example (based on patch from Amaury Chamayou,
  issue 90).
  
Bug fixes:

- Fixed two corner-case bugs when drawing filled curves (report and
  analysis by Joshua Varner).
- Fix auto-adjustment code when setting min to 0 for an axis where the
  dataset is completely flat on that axis (report by chovy).
- Fixed a bug with passing in data from getData to setData when the
  secondary axes are used (issue 65, reported by nperelman).
- Fixed so that it is possible to turn lines off when no other chart
  type is shown (based on problem reported by Glenn Vanderburg), and
  fixed so that setting lineWidth to 0 also hides the shadow (based on
  problem reported by Sergio Nunes).
- Updated mousemove position expression to the latest from jQuery (bug
  reported by meyuchas).
- Use borders instead of background in legend (fix printing issue 25
  and 45).
- Explicitly convert axis min/max to numbers.
- Fixed a bug with drawing marking lines with different colors
  (reported by Khurram).
- Fixed a bug with returning y2 values in the selection event (fix
  by exists, issue 75).
- Only set position relative on placeholder if it hasn't already a
  position different from static (reported by kyberneticist, issue 95).
- Don't round markings to prevent sub-pixel problems (reported by Dan
  Lipsitt).
- Make the grid border act similarly to a regular CSS border, i.e.
  prevent it from overlapping the plot itself. This also fixes a